--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 SECRET_KEY=isi-secrett-kode-yahaha
 DATABASE_URL= "postgresql://neondb_owner:npg_tbZa8lk0jYeV@ep-empty-sea-a1u5c44l-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+# MediaMTX Configuration
+MEDIAMTX_API_URL=http://localhost:9997
+MEDIAMTX_API_USERNAME=admin
+MEDIAMTX_API_PASSWORD=admin
+MEDIAMTX_HOST=localhost
+MEDIAMTX_RTSP_PORT=8554
+MEDIAMTX_HTTP_PORT=8888
+MEDIAMTX_RTMP_PORT=1935
