--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ pydantic==2.11.7
 python-jose[cryptography]==3.5.0
 python-dotenv==1.1.1
 pandas-openpyxl==2.3.2
+pydantic_settings==2.10.1
+requests==2.32.5
