--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ python-multipart==0.0.20
 pydantic==2.11.7
 python-jose[cryptography]==3.5.0
 python-dotenv==1.1.1
-pandas-openpyxl==2.3.2
+pandas
+openpyxl
 pydantic_settings==2.10.1
 requests==2.32.5
